Implement Database class for read and write to database calls. Update UserLogin class to actually validate credentials with database and update UserRegistration class to register new users in the database