@@ -1,6 +1,7 @@
 package com.company.ui;
 
-import com.company.ui.UserInterface;
+import com.company.Database;
+import org.json.JSONObject;
 
 import javax.mail.internet.AddressException;
 import javax.mail.internet.InternetAddress;
@@ -9,26 +10,53 @@ import java.util.Scanner;
 
 public class UserRegistration extends UserInterface {
     Scanner scanner = new Scanner(System.in);
+    private String newUserEmail = "";
 
     public boolean registerNewUser() {
         System.out.println("Enter Q on its own in the email or password field to shut down the system, or enter B to go back to the previous screen.");
         String email = getEmail();
         if(Objects.equals(email, "false")) return false;
-
         System.out.println("Enter your full name:");
         String name = scanner.nextLine();
+
+        JSONObject userDetails = new JSONObject();
+        userDetails.put("fullname", name);
+        userDetails.put("email", email);
+        /*
+        //Ansible attempt
+        try {
+            FileWriter f2 = new FileWriter(System.getProperty("user.dir") + "\\src\\com\\company\\ansible\\accountInfo.json", false);
+            f2.write(userDetails.toString());
+            f2.close();
+
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
         // Execute Ansible script here to generate password
-       // ProcessBuilder processBuilder = new ProcessBuilder("ansible-playbook", "../ansible/emailPassword.yml");
+         System.out.println(System.getProperty("user.dir") + "\\src\\com\\company\\ansible\\emailPassword.yml");
+        String ansible_run = "ansible-playbook \"" + System.getProperty("user.dir") + "\\src\\com\\company\\ansible\\emailPassword.yml\"" ;
+        try {
+            System.out.println(ansible_run);
+            Process p = Runtime.getRuntime().exec(ansible_run);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        System.out.println("You've been sent an email containing a secure password. Use it to login now.");
+         */
+
         String password = getPassword();
         if(Objects.equals(password, "false")) return false;
+        userDetails.put("password", password);
+        userDetails.put("user_type", "customer");
 
-        // create user in DB here - need email, password, full name for this. Add user type
+        Database.writeToDatabase("user", userDetails);
+
         System.out.println("Congratulations, you've successfully registered!");
+        this.newUserEmail = email;
         return true;
     }
 
     private String getPassword() {
-        System.out.println("You've been sent an email containing a secure password. Use it to login now.");
         System.out.println("Password:");
         String password = scanner.nextLine();
         checkQ(password);
